<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">PPCalc</string>
    <string name="protein">Protein</string>
    <string name="carbs">Carbohydrates</string>
    <string name="fat">Fat</string>
    <string name="fibre">Fibre</string>
    <string name="calculate">Calculate</string>
    <string name="init">Init</string>
    <string name="nil">0</string>
    <string name="points">Points</string>
	<plurals name="num_points">
        <item quantity="zero">Zero points.</item>
        <item quantity="one">%d point.</item>
        <item quantity="other">%d points.</item>
    </plurals>
</resources>